added random color in output

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "uniqolor": "^1.1.1",
     "vue": "^3.3.11"
   },
   "devDependencies": {
